Update RotS data notes

--- a/src/data/starships.yaml
+++ b/src/data/starships.yaml
@@ -4114,7 +4114,7 @@
   hp: 0
   weapons: 2
   additionalRules: Discord Missile Launcher, Variable Geometry
-  notes:
+  notes: "Crew: Integrated droid brain."
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:74
   generatedId: f962f135-4135-41d3-a914-ce8c2093f47b
 - category: Starfighters
