--- a/src/data/vehicles.yaml
+++ b/src/data/vehicles.yaml
@@ -2341,7 +2341,7 @@
   rarity: 6
   hp: 1
   weapons: 3
-  notes:
+  notes: "Crew: Integrated droid brain."
   index: cf023ae2-5206-49e0-9e39-550bba0f7f56:68
   generatedId: 1d9d673c-8b75-4724-a604-c2e583fc18f7
 - category: Walkers
