--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -80,7 +80,7 @@
   entered: Yes
   audited: No
 - book: Age of Rebellion Beginner Game - Adventure Book
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -170,7 +170,7 @@
   entered: Yes
   audited: No
 - book: Age of Rebellion Beginner Game - Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -260,7 +260,7 @@
   entered: Yes
   audited: No
 - book: Age of Rebellion Core Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -350,7 +350,7 @@
   entered: Yes
   audited: Yes
 - book: Allies and Adversaries
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: Yes
   audited: Yes
@@ -440,7 +440,7 @@
   entered: Yes
   audited: No
 - book: Beyond the Rim
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -530,7 +530,7 @@
   entered: Yes
   audited: No
 - book: Chronicles of the Gatekeeper
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -620,7 +620,7 @@
   entered: Yes
   audited: No
 - book: Citizens of the Galaxy Adversary Deck
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -710,7 +710,7 @@
   entered: Yes
   audited: Yes
 - book: Collapse of the Republic
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: Yes
   audited: Yes
@@ -800,7 +800,7 @@
   entered: No
   audited: No
 - book: Cyphers and Masks
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: Yes
   audited: Yes
@@ -890,7 +890,7 @@
   entered: Yes
   audited: No
 - book: Dangerous Covenants
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -980,7 +980,7 @@
   entered: No
   audited: No
 - book: Dawn of Rebellion
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: No
   audited: No
@@ -1070,7 +1070,7 @@
   entered: Yes
   audited: No
 - book: Dead in the Water
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1160,7 +1160,7 @@
   entered: Yes
   audited: No
 - book: Desperate Allies
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1250,7 +1250,7 @@
   entered: Yes
   audited: No
 - book: Disciples of Harmony
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1340,7 +1340,7 @@
   entered: Yes
   audited: No
 - book: Edge of the Empire Beginner Game - Adventure Book
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1430,7 +1430,7 @@
   entered: Yes
   audited: No
 - book: Edge of the Empire Beginner Game - Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1520,7 +1520,7 @@
   entered: Yes
   audited: No
 - book: Edge of the Empire Core Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1610,7 +1610,7 @@
   entered: Yes
   audited: No
 - book: "Edge of the Empire Game Master's Kit"
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1700,7 +1700,7 @@
   entered: Yes
   audited: No
 - book: Endless Vigil
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1790,7 +1790,7 @@
   entered: Yes
   audited: No
 - book: Enter the Unknown
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1880,7 +1880,7 @@
   entered: Yes
   audited: No
 - book: Far Horizons
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -1970,7 +1970,7 @@
   entered: Yes
   audited: No
 - book: Fly Casual
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2060,7 +2060,7 @@
   entered: Yes
   audited: No
 - book: Force and Destiny Beginner Game - Adventure Book
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2150,7 +2150,7 @@
   entered: Yes
   audited: No
 - book: Force and Destiny Beginner Game - Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2240,7 +2240,7 @@
   entered: Yes
   audited: No
 - book: Force and Destiny Core Rulebook
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2330,7 +2330,7 @@
   entered: Yes
   audited: No
 - book: Forged in Battle
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2420,7 +2420,7 @@
   entered: Yes
   audited: No
 - book: Friends Like These
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2510,7 +2510,7 @@
   entered: No
   audited: No
 - book: Fully Operational
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: No
   audited: No
@@ -2600,7 +2600,7 @@
   entered: No
   audited: No
 - book: Gadgets and Gear
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: No
   audited: No
@@ -2690,7 +2690,7 @@
   entered: Yes
   audited: No
 - book: Ghosts of Dathomir
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2780,7 +2780,7 @@
   entered: Yes
   audited: No
 - book: Hidden Depths
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2870,7 +2870,7 @@
   entered: Yes
   audited: No
 - book: Imperials and Rebels Adversary Deck
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -2960,7 +2960,7 @@
   entered: Yes
   audited: No
 - book: Jewel of Yavin
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3050,7 +3050,7 @@
   entered: Yes
   audited: No
 - book: Keeping the Peace
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3140,7 +3140,7 @@
   entered: No
   audited: No
 - book: Knights of Fate
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: Yes
   audited: Yes
@@ -3230,7 +3230,7 @@
   entered: Yes
   audited: No
 - book: Lead by Example
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: Yes
@@ -3320,7 +3320,7 @@
   entered: Yes
   audited: No
 - book: Lords of Nal Hutta
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3410,7 +3410,7 @@
   entered: Yes
   audited: No
 - book: Mask of the Pirate Queen
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3500,7 +3500,7 @@
   entered: Yes
   audited: No
 - book: Nexus of Power
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3590,7 +3590,7 @@
   entered: Yes
   audited: No
 - book: No Disintegrations
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3680,7 +3680,7 @@
   entered: Yes
   audited: No
 - book: Onslaught at Arda I
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3770,7 +3770,7 @@
   entered: Yes
   audited: No
 - book: Operation Shadowpoint
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3860,7 +3860,7 @@
   entered: Yes
   audited: No
 - book: Rescue at Glare Peak
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -3950,7 +3950,7 @@
   entered: Yes
   audited: Yes
 - book: Rise of the Separatists
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: Yes
   audited: Yes
@@ -4040,7 +4040,7 @@
   entered: Yes
   audited: No
 - book: Savage Spirits
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4130,7 +4130,7 @@
   entered: Yes
   audited: No
 - book: Scum and Villainy Adversary Deck
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4220,7 +4220,7 @@
   entered: Yes
   audited: No
 - book: Special Modifications
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4310,7 +4310,7 @@
   entered: No
   audited: No
 - book: Starships and Speeders
-  resource: Weapon Attachments
+  resource: Attachments
   source: The Outer Rim
   entered: No
   audited: No
@@ -4400,7 +4400,7 @@
   entered: Yes
   audited: No
 - book: Stay on Target
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4490,7 +4490,7 @@
   entered: Yes
   audited: No
 - book: Strongholds of Resistance
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4580,7 +4580,7 @@
   entered: Yes
   audited: No
 - book: Suns of Fortune
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
@@ -4670,7 +4670,7 @@
   entered: Yes
   audited: No
 - book: Unlimited Power
-  resource: Weapon Attachments
+  resource: Attachments
   source: Viluppo
   entered: Yes
   audited: No
