Add CotR adversaries

--- a/src/data/adversaries.yaml
+++ b/src/data/adversaries.yaml
@@ -4385,7 +4385,7 @@
   abilities: Droid, Sabotage, Silhouette 0
   equipment: Integrated Saws and Drills
   notes:
-  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:141
+  index: cf023ae2-5206-49e0-9e39-550bba0f7f56:141, 04196a88-99d9-4018-83ef-ca37d68a4869:142
   generatedId: 336daddd-5bc7-4ad0-a230-5c82ff7e2c9a
 - name: B-1 Battle Droid
   level: Minion
@@ -4824,3 +4824,592 @@
   notes:
   index: f358e094-fb3f-46ca-a540-b76c474ac712:45, cf023ae2-5206-49e0-9e39-550bba0f7f56:144
   generatedId: 89d14418-d27c-4064-95cc-b46d4551f3c7
+- name: Ahsoka Tano
+  level: Nemesis
+  soak: 2
+  wt: 13
+  st: 13
+  mr: 2/1
+  brawn: 2
+  agility: 4
+  intellect: 3
+  cunning: 4
+  willpower: 3
+  presence: 3
+  skills: Athletics 2, Charm 1, Coercion 2, Cool 2, Coordination 3, Discipline 3, Knowledge (Lore) 1, Knowledge (Underworld) 2, Knowledge (Warfare) 4, Lightsaber 4, Leadership 2, Mechanics 2, Perception 3, Piloting (Planetary) 3, Piloting (Space) 2, Stealth 3, Vigilance 2
+  talents: Adversary 2, Ataru Technique, Circle of Shelter, Force Rating 3, Parry 3, Improved Reflect 3, Saber Swarm
+  abilities: Force Power Enhance, Force Power Move, Force Power Sense
+  equipment: "Ahsoka's Lightsaber, Ahsoka's Shoto, Encrypted Comlink"
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:83
+  generatedId: 591025d2-111e-4c33-b38c-5daab6f06e37
+- name: Anakin Skywalker
+  level: Nemesis
+  soak: 5
+  wt: 17
+  st: 15
+  mr: 1/1
+  brawn: 4
+  agility: 4
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 3
+  skills: Athletics 2, Coercion 4, Cool 2, Deception 2, Discipline 2, Gunnery 3, Leadership 3, Lightsaber 4, Perception 2, Piloting (Space) 5, Vigilance 3
+  talents: Adversary 3, Force Rating 5, Improved Parry 4, Improved Reflect 4
+  abilities: Chosen One, Force Power Bind, Force Power Enhance, Force Power Move, Force Power Sense
+  equipment: "Anakin's Lightsaber, Padded Robes"
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:84
+  generatedId: a2b2983b-7c14-4730-a0f5-166fc8844a9d
+- name: Admiral Trench
+  level: Nemesis
+  soak: 3
+  wt: 16
+  st: 12
+  mr: 0
+  brawn: 3
+  agility: 2
+  intellect: 4
+  cunning: 5
+  willpower: 3
+  presence: 3
+  skills: Astrogation 4, Coercion 4, Cool 4, Deception 4, Knowledge (Warfare) 5, Leadership 3, Melee 2, Perception 4, Ranged (Light) 2
+  talents: Adversary 1, Clever Commander
+  abilities: Deadly Blockade, Presumed Dead
+  equipment: Concealed Implanted Electronet Launcher, Electrocane
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:88
+  generatedId: b8a9736c-0f40-4bea-b12d-7840427b06d7
+- name: Aurra Sing
+  level: Nemesis
+  soak: 3
+  wt: 16
+  st: 18
+  mr: 1/1
+  brawn: 3
+  agility: 4
+  intellect: 3
+  cunning: 4
+  willpower: 4
+  presence: 2
+  skills: Brawl 4, Coercion 3, Cool 5, Deception 2, Discipline 2, Knowledge (Underworld) 3, Negotiation 2, Piloting (Planetary) 4, Ranged (Heavy) 5, Ranged (Light) 4, Streetwise 3, Survival 3. Vigilance 4
+  talents: Adversary 2, Precise Aim 3
+  abilities: Rhen-Orm Biocomputer
+  equipment: Twin DX-13 Blaster Pistols, Czerka Adventurer Slugthrower Rifle, Concealed Boot Darts, Knuckles, Second Skin Armored Bodysuit, Tracker Utility Belt
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:92
+  generatedId: de6128dd-6943-426f-8609-ca46acf23a77
+- name: Cad Bane
+  level: Nemesis
+  soak: 4
+  wt: 15
+  st: 18
+  mr: 1/1
+  brawn: 3
+  agility: 4
+  intellect: 2
+  cunning: 4
+  willpower: 3
+  presence: 2
+  skills: Athletics 3, Brawl 4, Coercion 2, Computers 2, Cool 5, Coordination 4, Deception 4, Knowledge (Underworld) 4, Mechanics 3, Piloting (Planetary) 3, Piloting (Space) 3, Ranged (Heavy) 4, Ranged (Light) 5, Stealth 3, Streetwise 4, Survival 3, Vigilance 5
+  talents: Adversary 3, Clever Solution, Guns Blazing, Improved Quick Draw
+  abilities: Always a Backup Plan, Cybernetic Lungs
+  equipment: Twin Custom LL-30 Blaster Pistols, Bolas, Compact Flame Projector, Custom Shock Gloves, Longcoat, Wrist Guantlets with integrated datapad and whipcord thrower, Rocket Boots
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:93
+  generatedId: 07c17d98-2dd3-47a4-938a-239d493a4fbd
+- name: Maul
+  level: Nemesis
+  soak: 5
+  wt: 18
+  st: 21
+  mr: 1/0
+  brawn: 4
+  agility: 5
+  intellect: 3
+  cunning: 4
+  willpower: 4
+  presence: 3
+  skills: Athletics 4, Brawl 4, Coercion 3, Coordiantion 4, Deception 3, Knowledge (Lore) 3, Lightsaber 5, Piloting (Space) 3, Survival 1, Vigilance 3
+  talents: Adversary 3, Fear is My Ally, Force Rating 4, Hawkbat Swoop, Jump Up, Parry 4, Reflect 4
+  abilities: Dark Side Force User, Intimidating Countenance, Force Power Enhance, Force Power Move, Force Power Sense
+  equipment: "Maul's Lightsaber or the Darksaber, Cybernetic Legs, Nightbrother Heavy Clothing"
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:95
+  generatedId: 08f2274b-322b-4398-9b62-4776cefcbd25
+- name: Savage Opress
+  level: Nemesis
+  soak: 9
+  wt: 25
+  st: 15
+  mr: 1/1
+  brawn: 5
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 2
+  skills: Athletics 3, Brawl 4, Coercion 4, Deception 1, Discipline 3, Lightsaber 4, Melee 4, Resilience 5, Vigilance 3
+  talents: Adversary 2, Force Ratin 2, Parry 4, Reflect 3
+  abilities: Dark Side Force User, Anger is Strength, Intimidating Countenace, Force Power Bind, Force Power Enhance, Force Power Move, Force Power Sense
+  equipment: Ichor Pike or Double-Bladed Lightsaber, Heavy Battle Armor
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:95
+  generatedId: fcf6dce3-5604-4ef0-aa87-8a0c25744492
+- name: Mother Talzin
+  level: Nemesis
+  soak: 2
+  wt: 15
+  st: 22
+  mr: 1/1
+  brawn: 2
+  agility: 2
+  intellect: 5
+  cunning: 4
+  willpower: 5
+  presence: 3
+  skills: Cool 4, Deception 4, Discipline 4, Knowledge (Lore) 4, Melee 4, Negotiation 3, Vigilance 3
+  talents: Adversary 3, Force Rating 5
+  abilities: Incorporeal, Poppet Doll, Force Power Enhance, Force Power Misdirect, Force Power Move, Force Power Sense
+  equipment: Ichor Energy, Ichor Sword, Crystal Ball, Dooku Poppet Doll, Ichor Cauldron
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:96
+  generatedId: 656637a7-d56e-4eda-81e2-9dbb9c955d01
+- name: Felucian
+  level: Minion
+  soak: 3
+  wt: 5
+  st: "-"
+  mr: 0
+  brawn: 1
+  agility: 1
+  intellect: 2
+  cunning: 2
+  willpower: 1
+  presence: 2
+  skills: Survival
+  talents: None
+  abilities: Silhouette 0
+  equipment: Poisoned Spear
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:109
+  generatedId: c71440e0-d18a-421f-a8f6-ace7f27ff985
+- name: Clone Trooper
+  level: Minion
+  soak: 5
+  wt: 5
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 1
+  skills: Athletics, Brawl, Discipline, Ranged (Heavy), Vigilance
+  talents: None
+  abilities: Clone Inhibitor Chip
+  equipment: DC-15 Blaster Rifle, 2 Frag Grenades, Phase II Clone Trooper Armor, Utility Belt, Extra Reload
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:136
+  generatedId: 484ffb4b-4134-4262-a45c-d61075b79a29
+- name: Clone Sergeant
+  level: Rival
+  soak: 5
+  wt: 14
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 2
+  skills: Athletics 2, Brawl 2, Discipline 2, Leadership 2, Ranged (Heavy) 2, Ranged (Light) 2, Vigilance 2
+  talents: Adversary 1
+  abilities: Clone Inhibitor Chip, Tactical Direction
+  equipment: DC-15 Blaster Rifle, 2 Frag Grenades, Phase II Clone Trooper Armor, Utility Belt, Extra Reload
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:136
+  generatedId: bd1a7b9e-123f-44de-8aca-b4a0d264b069
+- name: Senate Guard
+  level: Rival
+  soak: 5
+  wt: 14
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 2
+  skills: Brawl 2, Discipline 2, Leadership 1, Melee 2, Ranged (Heavy) 2, Vigilance 1
+  talents: None
+  abilities: Reappropriate
+  equipment: Force Pike or Ceremonial Rifle, Comlink, Senate Guard Armor
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:136
+  generatedId: 4015bcf5-4c52-460a-9268-6cbb374f2f09
+- name: Jedi Temple Guard
+  level: Nemesis
+  soak: 4
+  wt: 18
+  st: 18
+  mr: 2/2
+  brawn: 3
+  agility: 2
+  intellect: 2
+  cunning: 3
+  willpower: 3
+  presence: 2
+  skills: Discipline 2, Medicine 2, Melee 2, Lightsaber 2, Perception 2, Vigilance 2
+  talents: Adversary 1, Force Rating 4, Parry 4, Reflect 4
+  abilities: Force Power Bind
+  equipment: Temple Guard Lightsaber Pike, Jedi Temple Guard Armor, Keys
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:137
+  generatedId: a144dd66-30d3-43d8-928c-ae32a2999fa0
+- name: Jedi Padawan
+  level: Rival
+  soak: 4
+  wt: 14
+  st: "-"
+  mr: 1/1
+  brawn: 3
+  agility: 2
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 2
+  skills: Discipline 2, Lightsaber 2, Perception 1, Resilience 1, Vigilance 1
+  talents: Adversary 1, Force Rating 1
+  abilities: Force Power Enhance, Force Power Move, Force Power Sense
+  equipment: Basic Lightsaber, Padawan Robes
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:137
+  generatedId: 95493f44-bc68-4ca4-aa01-269212425c9f
+- name: Nightsister
+  level: Rival
+  soak: 2
+  wt: 13
+  st: "-"
+  mr: 2/1
+  brawn: 2
+  agility: 3
+  intellect: 3
+  cunning: 3
+  willpower: 3
+  presence: 2
+  skills: Athletics 3, Discipline 2, Cool 2, Melee 3, Perception 1, Ranged (Heavy) 2, Resilience 1, Stealth 3, Vigilance 2
+  talents: None
+  abilities: "Mother's Blessing"
+  equipment: Enchanted Nightsister Blade, Nightsister Energy Bow, Nightsister Robes
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:138
+  generatedId: f09c3216-a481-4c25-82e4-3bb3998a6c1f
+- name: Nightbrother Warrior
+  level: Rival
+  soak: 3
+  wt: 14
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 2
+  presence: 2
+  skills: Athletics 1, Discipline 2, Melee 3, Perception 1, Resilience 1, Survival 1, Vigilance 1
+  talents: None
+  abilities: None
+  equipment: Enchanted Spear
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:138
+  generatedId: 0df43c2c-99f9-42d1-b037-383b7184560d
+- name: Death Watch Commando
+  level: Rival
+  soak: 5
+  wt: 15
+  st: "-"
+  mr: 1/1
+  brawn: 3
+  agility: 3
+  intellect: 2
+  cunning: 2
+  willpower: 3
+  presence: 2
+  skills: Discipline 1, Melee 2, Piloting (Planetary) 3, Ranged (Heavy) 2, Ranged (Light) 2, Resilience 2, Vigilance 1
+  talents: Hit and Run
+  abilities: None
+  equipment: Blaster Pistol, Flame Projector, Vibroknife, Death Watch Armor, Jetpack
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:138
+  generatedId: 1ee13c51-2a2a-4b31-a6e4-fa7a6815f25e
+- name: Pyke Syndicate Interrogator
+  level: Rival
+  soak: 3
+  wt: 13
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 2
+  intellect: 3
+  cunning: 3
+  willpower: 2
+  presence: 3
+  skills: Brawl 1, Coercion 3, Discipline 2, Knowledge (Xenology) 3, Medicine 3, Ranged (Light) 2, Resilience 2, Vigilance 1
+  talents: None
+  abilities: None
+  equipment: Blaster Pistol, Vibroknife, Custom Medkit containing tools for minor surgery, various toxins and types of spice, blades in an array of sizes
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:139
+  generatedId: 1f91f130-80d3-4a20-ae8a-f6cfde6feb10
+- name: Trandoshan Hunter
+  level: Rival
+  soak: 6
+  wt: 18
+  st: "-"
+  mr: 0
+  brawn: 4
+  agility: 2
+  intellect: 2
+  cunning: 3
+  willpower: 2
+  presence: 1
+  skills: Brawl 2, Cool 2, Discipline 1, Perception 2, Ranged (Heavy) 3, Survival 3, Vigilance 2
+  talents: None
+  abilities: Regeneration
+  equipment: Blaster Rifle, Claws, Hunter Armor
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:139
+  generatedId: f20cc5f5-bf5c-4589-a51c-e3a46c92b5f7
+- name: Aqua Droid
+  level: Minion
+  soak: 4
+  wt: 7
+  st: "-"
+  mr: 0
+  brawn: 2
+  agility: 3
+  intellect: 1
+  cunning: 1
+  willpower: 1
+  presence: 1
+  skills: Athletics, Ranged (Heavy)
+  talents: None
+  abilities: Amphibious, Droid
+  equipment: Retractable Blaster
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:140
+  generatedId: 7af801ed-b441-49c6-adad-955dafdb71fe
+- name: Arakyd Ringneck Recon Droid
+  level: Rival
+  soak: 3
+  wt: 1
+  st: "-"
+  mr: 0/1
+  brawn: 1
+  agility: 3
+  intellect: 2
+  cunning: 3
+  willpower: 1
+  presence: 1
+  skills: Cool 1, Perception 2, Ranged (Light) 2, Survival 2, Vigilance 2
+  talents: None
+  abilities: Droid, Hoverer, Silhouette 0
+  equipment: Built-in Dual Blaster Pistols, Life-Form Scanner, Long-Range Holo-Net Communication, Long-Range Sensor Array
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:140
+  generatedId: 2e47d210-929b-4f44-b5eb-7708dd3fa2af
+- name: Assassin Probe Droid
+  level: Rival
+  soak: 5
+  wt: 20
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 4
+  intellect: 2
+  cunning: 3
+  willpower: 1
+  presence: 1
+  skills: Athletics 2, Brawl 3, Perception 1, Stealth 3, Survival 2, Vigilance 3
+  talents: Adversary 1
+  abilities: Droid, Release Probe Killers
+  equipment: Razor-Sharp Limbs
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:141
+  generatedId: f7c464a0-b0a5-4af6-9773-a18a2b5cd8cc
+- name: Probe Killer Swarm
+  level: Rival
+  soak: 1
+  wt: 25
+  st: "-"
+  mr: 0
+  brawn: 1
+  agility: 3
+  intellect: 1
+  cunning: 2
+  willpower: 1
+  presence: 1
+  skills: Brawl 3, Coordination 2, Stealth 2
+  talents: None
+  abilities: Droid, Droid Swarm, Overwhelming Numbers
+  equipment: Tiny Razor-Sharp Legs
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:141
+  generatedId: 479eb849-7403-4132-893c-dbed7a310f59
+- name: B1 Rocket Battle Droid
+  level: Minion
+  soak: 4
+  wt: 5
+  st: "-"
+  mr: 0
+  brawn: 2
+  agility: 2
+  intellect: 1
+  cunning: 1
+  willpower: 1
+  presence: 1
+  skills: Piloting (Planetary), Ranged (Heavy)
+  talents: None
+  abilities: Droid
+  equipment: E-5 Blaster Rifle, Integrated Comlink, Head-Mounted Floodlight, Fusion Cutters, Rocket Pack
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:141
+  generatedId: 1dab0983-8aaa-4922-8fd5-2f01f08f6d40
+- name: B1 Supervisor Droid
+  level: Rival
+  soak: 4
+  wt: 8
+  st: "-"
+  mr: 0
+  brawn: 2
+  agility: 2
+  intellect: 2
+  cunning: 1
+  willpower: 1
+  presence: 1
+  skills: Cool 2, Gunnery 2, Leadership 3, Ranged (Heavy 2, Vigilance 1
+  talents: None
+  abilities: Droid, Coordinate and Confuse
+  equipment: E-5 Blaster Rifle, Mini-Probe
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:142
+  generatedId: 89a577fc-440e-4ddc-9eff-c79ec8cfe014
+- name: BX-Series Doird Commando
+  level: Rival
+  soak: 5
+  wt: 5
+  st: "-"
+  mr: 0
+  brawn: 3
+  agility: 3
+  intellect: 1
+  cunning: 2
+  willpower: 1
+  presence: 1
+  skills: Cool, Melee, Ranged (Heavy), Ranged (Light), Stealth
+  talents: None
+  abilities: Droid
+  equipment: E-5 Blaster Rifle, Vibrosword, Frag Grenade, Stun Grenade
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:142
+  generatedId: cf8894b5-5407-45cc-890d-0a6788a0e823
+- name: Droideka Sharpshooter
+  level: Rival
+  soak: 7
+  wt: 16
+  st: "-"
+  mr: 0
+  brawn: 4
+  agility: 4
+  intellect: 1
+  cunning: 2
+  willpower: 1
+  presence: 1
+  skills: Gunnery 3, Perception 3, Resilience 3, Stealth 1
+  talents: None
+  abilities: Armored Shield, Droid
+  equipment: Integrated Droideka Blaster Rifle
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:143
+  generatedId: 89cca1ad-da60-420a-a7df-3431b90b379e
+- name: FA-4 Pilot Droid
+  level: Rival
+  soak: 4
+  wt: 5
+  st: "-"
+  mr: 0
+  brawn: 2
+  agility: 2
+  intellect: 2
+  cunning: 2
+  willpower: 1
+  presence: 1
+  skills: Astrogation 3, Knowledge (Outer Rim) 2, Piloting (Planetary) 3, Piloting (Space) 3
+  talents: None
+  abilities: Droid
+  equipment: Integrated Comlink
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:143
+  generatedId: 9486d911-775d-49f0-b607-86d33b9098e5
+- name: Octuptarra Combat Tri-Droid
+  level: Rival
+  soak: 10
+  wt: 25
+  st: "-"
+  mr: 0
+  brawn: 4
+  agility: 2
+  intellect: 1
+  cunning: 1
+  willpower: 1
+  presence: 1
+  skills: Gunnery 4
+  talents: None
+  abilities: Droid, Silhouette 3
+  equipment: Built-in Heavy Blasters
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:144
+  generatedId: 60ee831a-a18c-43fb-b668-a5d153859239
+- name: Super Battle Droid Rocket Trooper
+  level: Minion
+  soak: 6
+  wt: 7
+  st: "-"
+  mr: 0
+  brawn: 4
+  agility: 3
+  intellect: 1
+  cunning: 1
+  willpower: 1
+  presence: 1
+  skills: Piloting (Planetary), Ranged (Heavy), Ranged (Light)
+  talents: None
+  abilities: Droid
+  equipment: Superior Integrated Wrist Blaster, Integrated Comlink, Integrated Rocket Pack
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:144
+  generatedId: b3a1d3d4-c4e0-43a7-9a3a-dcd15a11f2e5
+- name: Super Tactical Droid
+  level: Nemesis
+  soak: 5
+  wt: 18
+  st: 18
+  mr: 0
+  brawn: 3
+  agility: 2
+  intellect: 4
+  cunning: 4
+  willpower: 4
+  presence: 3
+  skills: Brawl 2, Coercion 2, Cool 3, Discipline 2, Knowledge (Warfare) 4, Leadership 4, Negotiation 2, Perception 2, Vigilance 2
+  talents: Adversary 1, Improved Droid Commander, Improved Scathing Tirade
+  abilities: Droid
+  equipment: Mechanical Fists
+  notes:
+  index: 04196a88-99d9-4018-83ef-ca37d68a4869:144
+  generatedId: 143c3e91-2b39-400f-8722-782fc22d39a4
