--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -637,8 +637,8 @@
 - book: Collapse of the Republic
   resource: Adversaries
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Collapse of the Republic
   resource: Adversaries Armor
   source: The Outer Rim
